modificacion de archivos y directorios para git para mysql

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ dist/
 # TypeScript cache
 *.tsbuildinfo
 
+# Carpeta de datos MySQL
+mysql/*
+!mysql/.gitkeep
+mysql/data/*
+!mysql/data/.gitkeep
+
+
+
